# skeletal-package

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  standards.md
scripts/: example_cli.py
src/skeleton_package/: __init__.py
src/skeleton_package/application/: __init__.py  project_name_service.py
src/skeleton_package/domain/: __init__.py  project_name.py
src/skeleton_package/infrastructure/: __init__.py
src/skeleton_package/interfaces/: __init__.py
tests/: test_package_metadata.py  test_tooling_configuration.py
tests/architecture/: test_architecture.py  test_import_time_discipline.py  test_repository_hygiene.py  test_script_structure.py  test_test_suite_discipline.py
tests/integration/: test_example_cli_integration.py
tests/smoke/: test_smoke_imports.py
tests/support/: paths.py
tests/unit/application/: test_project_name_service.py
tests/unit/domain/: test_project_name.py
